<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.regoppslag</groupId>
	<artifactId>regoppslag</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>registerinfo</module>
		<module>postadresse</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.8</version>
	</parent>

	<properties>
		<java.version>17</java.version>

		<resilience4j.version>1.7.1</resilience4j.version>
		<cxf.version>3.5.5</cxf.version>
		<rxjava.version>3.1.6</rxjava.version>
		<microsoft-graph.version>5.44.0</microsoft-graph.version>
		<kryo.version>5.4.0</kryo.version>
		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
		<nv-i18n.version>1.29</nv-i18n.version>
		<xercesImpl.version>2.12.2</xercesImpl.version>
		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<token-support.version>2.1.4</token-support.version>

		<!-- Interne NAV-avhengigheter -->
		<organisasjonenhetkontaktinformasjon-v1-tjenestespesifikasjon.version>1.1.0
		</organisasjonenhetkontaktinformasjon-v1-tjenestespesifikasjon.version>
		<pesysbrev01.version>2.9.9</pesysbrev01.version>
		<dokkat-api.version>11.0.6</dokkat-api.version>
		<brevdata-felles.version>0.0.10</brevdata-felles.version>

		<!-- Test -->
		<spring-cloud-contract-wiremock.version>3.1.5</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>registerinfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.regoppslag</groupId>
				<artifactId>postadresse</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot2</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.esotericsoftware</groupId>
				<artifactId>kryo</artifactId>
				<version>${kryo.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava3</groupId>
				<artifactId>rxjava</artifactId>
				<version>${rxjava.version}</version>
			</dependency>

			<!--CXF dependencies-->
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.neovisionaries</groupId>
				<artifactId>nv-i18n</artifactId>
				<version>${nv-i18n.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester</groupId>
				<artifactId>nav-organisasjonEnhetKontaktinformasjon-v1-tjenestespesifikasjon</artifactId>
				<version>${organisasjonenhetkontaktinformasjon-v1-tjenestespesifikasjon.version}</version>
				<classifier>jaxws</classifier>
			</dependency>

			<dependency>
				<groupId>no.nav.dokkat</groupId>
				<artifactId>dokkat-api</artifactId>
				<version>${dokkat-api.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok.metaforcemal</groupId>
				<artifactId>pesysbrev01</artifactId>
				<version>${pesysbrev01.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok.metaforcemal</groupId>
				<artifactId>brevdata-felles</artifactId>
				<version>${brevdata-felles.version}</version>
			</dependency>
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>${xercesImpl.version}</version>
			</dependency>
			<dependency>
				<!-- Include the sdk as a dependency -->
				<groupId>com.microsoft.graph</groupId>
				<artifactId>microsoft-graph</artifactId>
				<version>${microsoft-graph.version}</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>